# mycelium

./: .gitignore  Cargo.toml  README.md  TODO.md
src/: classify.rs  learn.rs  main.rs  pipeline.rs
src/cnn/: mod.rs
src/companion/: mod.rs
src/gui/: mod.rs  params.rs  pipeline.rs  widgets.rs
src/interpret/: mod.rs
src/ml/: mod.rs
src/rag/: mod.rs
src/rc/: mod.rs
src/signal/: mod.rs
